# SAMS

./: Cargo.toml  README.md  crates.js  help.html  index.html  settings.html  src-files.js
.github/workflows/: rust.yml
examples/: embedded_demo.rs  linux_cli.rs  minimal.rs
sams/: all.html  constant.ATOM_SIZE.html  constant.FIXED_POINT_PRECISION.html  constant.VERSION.html  index.html  sidebar-items.js  type.Result.html
sams/codec/: constant.CODEC_VERSION.html  enum.CodecError.html  index.html  sidebar-items.js  struct.AtomCodec.html  struct.AtomIterator.html  struct.BatchCodec.html  struct.BatchResult.html  struct.CowAtom.html  struct.DecodedAtom.html  trait.SamsCodec.html
sams/shield/: enum.AnonymizationLevel.html  enum.ObfuscationStrategy.html  enum.ShieldError.html  index.html  sidebar-items.js  (+3 more)
search.index/: 000e204bbc86.js  00e89cbd9c9f.js  00f438bf567f.js  01659649f06e.js  033fdf4652a9.js  04d8f421fb0d.js  075da13e03f0.js  078b746fe530.js  08dbcb7388f3.js  0cebd49392e0.js  0da2f0e15009.js  0e0bfcb00ab4.js  0e17fd01169d.js  0e444bf0b9e5.js  0f873950ba41.js  0fa0c4908afb.js  0ff16e093379.js  11021a47caa4.js  114075667806.js  125b19b8e4d8.js  14ac359076fa.js  14e8c79ee0ff.js  15eb5ee45e37.js  1602f5e25f3b.js  1b297687ff01.js  1bcbe4537e74.js  1bfd412e5725.js  1c116e67bf57.js  1c4af4d7fa19.js  1cec2833ff11.js  1d2128d53db3.js  1dc1ede4d70f.js  1de63d28daf6.js  1e1ab54a2828.js  21020fc82e44.js  22b59a19a5e3.js  244e98d99aa8.js  25953af0d139.js  25958867748f.js  260bce5b76bf.js  (+110 more)
src/: codec.rs  lib.rs  shield.rs  transport.rs  types.rs  utils.rs
(+236 files in other folders)
