[package]
name = "sams"
version = "0.1.0"
edition = "2021"
description = "A memory-safe, 32-byte Semantic Atom Management Stack for industrial IPC."
license = "Apache-2.0 OR MIT"
authors = ["SGN Engineering <engineering@sgn.network>"]
repository = "https://github.com/LelloOmwei/SAMS"
documentation = "https://docs.rs/sams"
readme = "README.md"
keywords = ["embedded", "industrial", "ipc", "semantic", "atom", "no_std"]
categories = ["embedded", "no-std", "science", "data-structures"]
rust-version = "1.70"

[dependencies]
# Core dependencies (no_std compatible)
serde = { version = "1.0", default-features = false, features = ["derive"] }
heapless = "0.8"

# Optional std dependencies
chrono = { version = "0.4", optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
hmac = { version = "0.12", default-features = false, optional = true }

[features]
default = ["std"]
std = ["serde/std", "sha2/std", "hmac/std", "chrono"]
embedded = ["serde/derive"]
pqc = ["sha2", "hmac"]
# transport feature removed until Milestone T1 implementation

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
